@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.08_dev
 
+fix Apache::TestConfig::which to check that the found file is a plain
+file [Stas]
+
 implementing custom interactive and non-interactive (with the -save
 option) reusable configuration for -httpd, -apxs, -user, -group, and
 -port [Randy Kobes, Stas]
